[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://assets/images/player.png" type="Texture" id=2]
[ext_resource path="res://assets/images/arrow.png" type="Texture" id=3]
[ext_resource path="res://scripts/ui.gd" type="Script" id=4]
[ext_resource path="res://assets/sounds/jump.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/land.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/Death.wav" type="AudioStream" id=7]
[ext_resource path="res://scenes/transition.tscn" type="PackedScene" id=8]
[ext_resource path="res://themes/theme.tres" type="Theme" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21.9, 21.9 )

[sub_resource type="OccluderPolygon2D" id=2]
cull_mode = 1
polygon = PoolVector2Array( -22, 22, 22, 22, 22, -22, -22, -22 )

[sub_resource type="InputEventAction" id=3]

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Death" type="AudioStreamPlayer" parent="." groups=["sound_effect"]]
stream = ExtResource( 7 )
volume_db = -6.0

[node name="Jump" type="AudioStreamPlayer" parent="." groups=["sound_effect"]]
stream = ExtResource( 5 )
volume_db = -9.0

[node name="Land" type="AudioStreamPlayer" parent="." groups=["sound_effect"]]
stream = ExtResource( 6 )
volume_db = -12.0

[node name="PlayerBody" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Tween" type="Tween" parent="PlayerBody"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
rotating = true
current = true
process_mode = 0
smoothing_enabled = true
smoothing_speed = 10.0
drag_margin_left = 0.5
drag_margin_right = 0.5
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="ColorRect" parent="Camera2D" instance=ExtResource( 8 )]
pause_mode = 2
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -600.0
margin_top = 400.0
margin_right = -450.0
margin_bottom = 1300.0
rect_scale = Vector2( 10.0611, -0.887856 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 2 )

[node name="Arrow" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 3 )

[node name="Tween" type="Tween" parent="Arrow"]

[node name="Panel" type="Panel" parent="."]
pause_mode = 2
light_mask = -2147483648
margin_left = -200.0
margin_top = -200.0
margin_right = 200.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( 200, 200 )
theme = ExtResource( 9 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 20.0
anchor_bottom = 20.0
margin_right = -7660.0
margin_bottom = -7660.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_right = 300.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Panel/VBoxContainer/Music"]
margin_right = 103.0
margin_bottom = 22.0
text = "Music Volume:"

[node name="HSlider" type="HSlider" parent="Panel/VBoxContainer/Music"]
margin_left = 107.0
margin_right = 300.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.5

[node name="Effect" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 26.0
margin_right = 300.0
margin_bottom = 48.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Panel/VBoxContainer/Effect"]
margin_right = 97.0
margin_bottom = 22.0
text = "Sound Effects:"

[node name="HSlider" type="HSlider" parent="Panel/VBoxContainer/Effect"]
margin_left = 101.0
margin_right = 300.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.5

[node name="Shadow" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 52.0
margin_right = 300.0
margin_bottom = 86.0

[node name="Label" type="Label" parent="Panel/VBoxContainer/Shadow"]
margin_top = 6.0
margin_right = 67.0
margin_bottom = 28.0
text = "Shadows:"

[node name="CheckButton" type="CheckButton" parent="Panel/VBoxContainer/Shadow"]
margin_left = 71.0
margin_right = 125.0
margin_bottom = 34.0
pressed = true

[node name="Particles" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 90.0
margin_right = 300.0
margin_bottom = 124.0

[node name="Label" type="Label" parent="Panel/VBoxContainer/Particles"]
margin_top = 6.0
margin_right = 67.0
margin_bottom = 28.0
text = "Particles:"

[node name="CheckButton" type="CheckButton" parent="Panel/VBoxContainer/Particles"]
margin_left = 71.0
margin_right = 125.0
margin_bottom = 34.0
pressed = true

[node name="Button" type="Button" parent="Panel"]
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -20.0
shortcut = SubResource( 4 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaitForPlayerAnim" type="Timer" parent="."]

[connection signal="tween_completed" from="Arrow/Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="value_changed" from="Panel/VBoxContainer/Music/HSlider" to="Panel" method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="Panel/VBoxContainer/Effect/HSlider" to="Panel" method="_on_effect_volume_change"]
[connection signal="pressed" from="Panel/Button" to="Panel" method="_on_Button_pressed"]
